--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,19 +34,19 @@ jobs:
        
       - name: Build for Linux
         run: |
-          GOOS=linux GOARCH=amd64 go build -o myapp-linux
-          chmod +x myapp-linux
+          GOOS=linux GOARCH=amd64 go build -o datacmd-linux
+          chmod +x datacmd-linux
 
        
        
       - name: Build for Windows
         run: |
-          GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -o myapp-windows.exe
+          GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -o datacmd-windows.exe
 
        
       - name: Build for macOS
         run: |
-          GOOS=darwin GOARCH=amd64 go build -o myapp-macos
+          GOOS=darwin GOARCH=amd64 go build -o datacmd-macos
 
        
       - name: Create GitHub Release
@@ -67,8 +67,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./myapp-linux
-          asset_name: myapp-linux
+          asset_path: ./datacmd-linux
+          asset_name: datacmd-linux
           asset_content_type: application/octet-stream
 
       - name: Upload Windows Asset
@@ -77,8 +77,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./myapp-windows.exe
-          asset_name: myapp-windows.exe
+          asset_path: ./datacmd-windows.exe
+          asset_name: datacmd-windows.exe
           asset_content_type: application/octet-stream
       
       - name: Upload macOS Asset
@@ -87,6 +87,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./myapp-macos
-          asset_name: myapp-macos
+          asset_path: ./datacmd-macos
+          asset_name: datacmd-macos
           asset_content_type: application/octet-stream
