Fix syntax error in Get Tag Name step in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
        
       - name: Get Tag Name
         id: get_tag
-        run: echo "TAG_NAME=${GITHUB_REF}
+        run: echo "TAG_NAME=${GITHUB_REF}"
 
        
       - name: Build for Linux
