Add step to set up Go Modules in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,9 @@ jobs:
         id: get_tag
         run: echo "TAG_NAME=${GITHUB_REF}"
 
+      - name: Set up Go Modules
+        run: go mod tidy
+
        
       - name: Build for Linux
         run: |
